client/app/dashboard/model/edit/ModelEdit.styl
.dashboard .content
  padding 25px 25px

.model-edit
  max-width 768px
  .delete-button
    float right
  
.date-picker
  max-width: 220px
  table
    outline none
    thead, tbody, th, td
      background-color #fff
      border none
      padding: 0 0
    .btn
      background-image: none
      border: 0
      box-shadow: none
.multi-select
  .select-item
    display: block
    line-height: 30px
    .checkbox-label
      font-weight: 400

model-field-reference-edit
  display block
  border-radius 4px
  .close
    padding-top 2px
            
model-field-file-edit
  button.select-file
    width: 120px
    cursor pointer
  .file-upload-info
    margin-left 5px
  .file-drop
    display: none
    margin-top: 10px
    width 300px
    height 80px
    line-height 70px
    text-align center
    font-weight 600
    border dashed 6px #dedede
    vertical-align top
    &:show
      display: block
  input[type=file]
    margin-left -120px
    display inline-block
    width 120px
    height 34px
    vertical-align top
    opacity 0
    cursor pointer

model-field-image-edit, model-field-video-edit
  vertical-align top
  .image-container
    display inline-block
    width: 160px
    height: 160px
    vertical-align top
    margin-right 8px
    border solid 1px #dedede
    cursor: pointer
  .video-container
    display inline-block
    width 320px
    vertical-align top
    margin-right 8px
    border solid 1px #dedede
    video
      width 320px
    .placeholder
      width 100%
      height 160px
      line-height 150px
      text-align center
    @media screen and (max-width: 480px)
      width 160px
      video
        width 160px
  input[type=file]
    margin-left -124px
    display inline-block
    width 120px
    height 34px
    vertical-align top
    opacity 0
    cursor pointer
    &.show-upload
      margin-left -160px
      width 160px
      height 160px
  .image-drop
    display none
    width 160px
    height 160px
    line-height 160px
    text-align center
    font-weight 600
    border dashed 6px #dedede
    vertical-align top
    &.show-upload
      display: inline-block
  .cancel-button
    display none
  .button-menu
    display inline-block
    &.hide-menu
      display none
  .upload-button
    width: 120px
  .clear-button
    display block
    margin-top: 8px

model-field-canvas-edit
  canvas
    border solid 1px #ddd
    vertical-align top
  button
    display inline-block
    vertical-align top
    margin-left 10px

model-field-edit
  .checkbox-container
    input[type=checkbox]
      margin: -2px 0 0 10px
      transform: scale(1.5);
      -ms-transform: scale(1.5); /* IE */
      -moz-transform: scale(1.5); /* FF */
      -webkit-transform: scale(1.5); /* Safari and Chrome */
      -o-transform: scale(1.5); /* Opera */
    .checkbox-label
      margin-left: 15px
      text-align: left
      font-weight: bold
      width: auto
  .ng-invalid
    border: solid 1px red
  .jslider
    top: 15px
    .jslider-bg
      height: 8px
      border: solid 1px #ccc
      border-radius: 4px
      overflow: hidden
      background: #fff
      i.l, i.r, i.v, i.p, i.s, i.f
        height: 8px
        background: transparent
      i.v
        background-color: #eee
      
    .jslider-pointer
      top: -6px
      width: 20px
      height: 20px
      border-radius: 10px
      background-color: #fff
      background: -webkit-linear-gradient(top, #fff 0%, #e0e0e0 100%)
      background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#e0e0e0))
      background: linear-gradient(to bottom, #fff 0%, #e0e0e0 100%)
      background-repeat: repeat-x
      border: solid 1px #ccc
      box-shadow: inset 0 1px 0 rgba(255, 255, 255, .15), 0 1px 1px rgba(0, 0, 0, .075)

model-field-location-edit
  min-width: 320px
  .map-canvas
    display: block;
    width: 620px;
    height: 275px;
    background-color: #d3d3d3;
  label
    .col-sm
      width: 100%
      margin-top: 8px
  .checkbox-container
    input[type=checkbox]
      margin: 2px 0 0 10px
      transform: scale(1.5);
      -ms-transform: scale(1.5); /* IE */
      -moz-transform: scale(1.5); /* FF */
      -webkit-transform: scale(1.5); /* Safari and Chrome */
      -o-transform: scale(1.5); /* Opera */
    .checkbox-label
      font-weight: bold
      float: right
      bottom: 50px
  .form-control
    margin-bottom: 10px
  .ui-select-bootstrap
    margin-top: 10px
    padding: 3px 0px
  ul
    list-style: none
    margin: 10px 0px
    padding: 0 0
    li
      position: relative
      border: solid 1px #dedede
      border-width: 1px 1px 1px 1px
      padding: 0px 10px
      line-height: 30px
      background-color: #fefefe
      clear: both
      white-space nowrap
      .location-title
        font-weight: bold

model-field-points-of-interest-edit
  min-width: 400px
  font-size 14px
  @media screen and (max-width 580px)
    .search-results
      font-size 8.5px
  .map-canvas
    display: block;
    height: 275px;
    background-color: #d3d3d3;
  label 
    .col-sm
      width: 100%
      margin-top: 8px
  .checkbox-container
    input[type=checkbox]
      margin: 2px 0 0 10px
      transform: scale(1.5);
      -ms-transform: scale(1.5); /* IE */
      -moz-transform: scale(1.5); /* FF */
      -webkit-transform: scale(1.5); /* Safari and Chrome */
      -o-transform: scale(1.5); /* Opera */
    .checkbox-label
      font-weight: bold
      float: right
      bottom: 50px
  .form-control
    margin-bottom: 10px
  .ui-select-bootstrap
    margin-top: 10px
    padding: 3px 0px
  ul
    list-style: none
    margin: 10px 0px
    padding: 0 0
    li
      position: relative
      border: solid 1px #dedede
      border-width: 1px 1px 1px 1px
      padding: 0px 10px
      line-height: 30px
      background-color: #fefefe
      clear: both
      white-space nowrap
      .location-title
        font-weight: bold
  a:hover
    color #000
  .loading
    margin-top 8px
  .search-error
    float right
    margin-top 10px
    color red

model-field-wysiwyg-edit
  .wysiwyg-toolbar
    display: block
    position: relative
    z-index: 99
    width: 100%
    height: 48px
    line-height: 44px
    background-color: #f9f9f9
    border solid 1px #ccc
    border-width 1px 1px 0 1px
    border-radius 4px 4px 0 0
    padding-left: 10px
    white-space nowrap
    @media screen and (max-width: 867px)
      height 96px
      white-space normal
    @media screen and (max-width: 767px)
      height 48px
      white-space nowrap
    @media screen and (max-width: 650px)
      height 96px
      white-space normal
    .picture-button
      *
        cursor pointer
      .picture-tool
        pointer-events none
        border-top-right-radius 4px !important
        border-bottom-right-radius 4px !important
    .btn
      padding 3px 8px
      .color-sample
        display:inline-block
        margin-top: 3px
        width: 15px
        height: 12px
        background-color: #000
        border: solid 1px #000
    .btn-info
      text-shadow 0 -1px 0 rgba(0, 0, 0, .2)
    .sp-container
      background-color: #fff !important
      border: 0 !important
    .dropdown
      display block
    .menu
      display none
      position absolute
      top 100%
      left 0
      z-index 1000
      float left
      margin 2px 0 0
      min-width 160px
      padding 10px
      border 1px solid rgba(0, 0, 0, .15)
      border-radius 4px
      box-shadow 0 6px 12px rgba(0, 0, 0, .175)
      background-color #fff
      &.open
        display block
        list-style-type none
        li
          line-height normal
          padding 5px
          a
            cursor pointer
      .add-button
        width 100%
  .wysiwyg-editor, .code-editor
    height 300px
    overflow auto
    border solid 1px #ccc
    outline none
    border-radius 0 0 4px 4px
    box-shadow inset 0 1px 1px rgba(0, 0, 0, .075)
    -webkit-box-shadow inset 0 1px 1px rgba(0, 0, 0, .075)
    padding 10px
    background-color #fff

.model-field-description
  padding: 10px 5px


@import ModelEditSaveDialog

